# accel-rs

./: Cargo.toml  Makefile
accel/: Cargo.toml.bak  README.md
accel/.vim/: coc-settings.json
accel/accel/: Cargo.toml
accel/accel-common/: Cargo.toml
accel/accel-common/src/: lib.rs
accel/accel-ebpf/: Cargo.toml
accel/accel-ebpf/src/: main.rs
accel/accel/.cargo/: config.toml
accel/accel/src/: main.rs
accel/afxdp/: Cargo.toml
accel/afxdp/src/: lib.rs
accel/router/: Cargo.toml
accel/router-ebpf/: Cargo.toml
accel/router-ebpf/src/: main.rs
accel/router/src/: lib.rs
accel/udp-server/: Cargo.toml
accel/udp-server-ebpf/: Cargo.toml
accel/udp-server-ebpf/src/: main.rs
accel/udp-server/.cargo/: config.toml
accel/udp-server/src/: lib.rs
accel/userspace/: Cargo.toml
accel/userspace/src/: lib.rs
accel/userspace/src/config/: config.rs  config.yaml
accel/userspace/src/handler/: handler.rs
accel/userspace/src/router/: handler.rs  router.rs
accel/userspace/src/udpserver/: handler.rs  mod.rs  udpserver.rs
accel/xtask/src/: build_ebpf.rs  run.rs
cli_client/: Cargo.toml
cli_client/src/: main.rs
cli_server/: Cargo.toml  build.rs
cli_server/proto/: cli_server.proto
cli_server/src/: lib.rs
cli_server/src/cli_server/: cli_server.rs
common/: Cargo.toml
common/src/: lib.rs
socket/: Cargo.toml
socket/src/: lib.rs
udp_client/: Cargo.toml
udp_client/src/: main.rs
udp_server/: Cargo.toml
udp_server/src/: main.rs
