[package]
name = "socket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", features = ["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya-log"}
aya-bpf = { git = "https://github.com/aya-rs/aya" }
libbpf-sys = "0.7.0+v0.7.0"
afxdp = { git = "https://github.com/michaelhenkel/afxdp-rs"}
network-types = "0.0.4"
arraydeque = "0.4"
log = "0.4.20"
