[package]
name = "accel"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", features = ["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya" }
clap = { version = "4.1", features = ["derive"] }
common = { path = "../../common", features = ["user"] }
anyhow = "1"
env_logger = "0.10"
libc = "0.2"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
network-types = "0.0.4"
futures = "0.3.28"
cli_server = { path = "../../cli_server" }
udp-server = { path = "../udp-server" }

[[bin]]
name = "accel"
path = "src/main.rs"
